<resources>
    <string name="app_name">AntiTheft</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numBack">X</string>
    <string name="ok">OK</string>
    <string name="txt_sms">Email thử nghiệm từ \n %1$s \n Số IMEI : %2$s \n Mã quốc gia : %3$s \n Điều hành : %4$s \n Số của bạn đã được lựa chọn bởi %5$s để được thông
    báo  khi thẻ sim của điện thoại được thay đổi \n %6$s</string>
</resources>
