<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.andexert.library.RippleView
            android:id="@+id/button1"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num1"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button2"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button3"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num3"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.andexert.library.RippleView
            android:id="@+id/button4"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num4"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button5"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num5"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button6"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num6"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.andexert.library.RippleView
            android:id="@+id/button7"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num7"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button8"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num8"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button9"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num9"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.andexert.library.RippleView
            android:id="@+id/buttonx"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numBack"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/button0"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num0"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/ok"
            rv_centered="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_color="@color/color_gray_light"
            app:rv_type="rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@color/color_text"
                    android:textSize="22dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.andexert.library.RippleView>

    </LinearLayout>
</LinearLayout>